discord-frontend/hartex-discord-entitycache-test/tests/ui/fail/does_not_exist_or_older_version.stderr
error: type `twilight_model::DoesNotExistOrOlderVersion` cannot be found
  --> tests/ui/fail/does_not_exist_or_older_version.rs:26:12
   |
26 |     from = "twilight_model::DoesNotExistOrOlderVersion",
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the type metadata generated was for twilight-model version 0.15.4
   = help: consider regenerating the metadata for a newer version if the type is recently added
